--- a/h5p/templates/h5p/_form.html
+++ b/h5p/templates/h5p/_form.html
@@ -39,23 +39,49 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     </div>
 
     <div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
-        <label for="{{ form.url.auto_id }}">{{ form.url.label }} <span>*</span></label>
-        {% render_field form.url class='form-control' %}
+        <label for="{{ form.h5p.auto_id }}">{{ form.h5p.label }}</label>
+        {% render_field form.h5p class='file-selector' data-max_size="10" %}
+        
+        <div class="input-group common-file-input">
+            <input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your file...' %}">
+            <span class="input-group-btn input-group-sm">
+                <button type="button" class="btn btn-fab btn-fab-mini">
+                    <i class="material-icons">attach_file</i>
+                </button>
+            </span>
+        </div>
+        
+        <div class="filedrag">
+            {% trans 'Click or drop the file here' %}<br />
+        
+            <small>{% trans 'The file could not exceed 10MB.' %}</small>
+        </div>
+        
+        <span id="helpBlock" class="help-block">{{ form.h5p.help_text }}</span>
+    </div>
 
-        <span id="helpBlock" class="help-block">{{ form.url.help_text }}</span>
-
-        {% if form.url.errors %}
+    {% if form.h5p.errors %}
         <div class="alert alert-danger alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             <ul>
-                {% for error in form.url.errors %}
+                {% for error in form.h5p.errors %}
                 <li>{{ error }}</li>
                 {% endfor %}
             </ul>
         </div>
-        {% endif %}
+    {% endif %}
+    
+    <div class="col-lg-12 col-md-12 col-sm-12 alert alert-danger alert-dismissible client-file-errors" style="display:none"
+        role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <ul>
+            <li class="size" style="display:none">{% trans "The file is too large. It should have less than 10MB." %}</li>
+            <li class="format" style="display:none">{% trans 'File not supported.' %}</li>
+        </ul>
     </div>
 
     <div class="row">
