Add youtube on summernote

--- a/mural/templates/mural/_form_comment.html
+++ b/mural/templates/mural/_form_comment.html
@@ -171,7 +171,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 		  	toolbar: [
 			    // [groupName, [list of button]]
 			    ['style', ['bold', 'italic']],
-			    ['insert', ['link']],
+			    ['insert', ['link','video']],
+			    ['para', ['paragraph']],
 			    ['mybuttons', ['addUser']],
 			    ['color', ['color']],
 		  	],
