--- a/mural/templates/mural/_form.html
+++ b/mural/templates/mural/_form.html
@@ -140,7 +140,9 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 		  	toolbar: [
 			    // [groupName, [list of button]]
 			    ['style', ['bold', 'italic']],
-			    ['insert', ['link']]
+			    ['insert', ['link','video']],
+			    ['para', ['paragraph']],
+			    ['color', ['color']]
 		  	]
 		});
 
