Adding student material submit flow

--- a/material_delivery/templates/material_delivery/_student_material_view.html
+++ b/material_delivery/templates/material_delivery/_student_material_view.html
@@ -1,4 +1,4 @@
-""" 
+<!-- 
 Copyright 2016, 2017 UFPE - Universidade Federal de Pernambuco
  
 Este arquivo é parte do programa Amadeus Sistema de Gestão de Aprendizagem, ou simplesmente Amadeus LMS
@@ -8,17 +8,15 @@ O Amadeus LMS é um software livre; você pode redistribui-lo e/ou modifica-lo d
 Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA; sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. Veja a Licença Pública Geral GNU para maiores detalhes.
  
 Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título "LICENSE", junto com este programa, se não, escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA.
-"""
+-->
+{% load static i18n %}
 
-from django.conf.urls import url
-from django.contrib.auth import views as auth_views
+<div class="col-lg-12 bg-success well-sm" style="margin-bottom: 1em">
+    <small class="text-muted">{% trans 'Submit date:' %} {{ material.upload_date|date:'SHORT_DATETIME_FORMAT' }}</small>
+    <br clear="all" />
+    <br clear="all" />
 
-from . import views
+    {{ material.commentary|safe }}
 
-urlpatterns = [
-    url(r"^create/(?P<slug>[\w_-]+)/$", views.CreateView.as_view(), name="create"),
-    url(r"^update/(?P<topic_slug>[\w_-]+)/(?P<slug>[\w_-]+)/$", views.UpdateView.as_view(), name="update"),
-    url(r"^delete/(?P<slug>[\w_-]+)/$", views.DeleteView.as_view(), name="delete"),
-    url(r"^view/(?P<slug>[\w_-]+)/$", views.DetailView.as_view(), name="view"),
-    url(r"^submit_material/(?P<deliver>[\w_-]+)/$", views.StudentMaterialCreate.as_view(), name="submit_material"),
-]
+    <a href="{{ material.file.url }}" download><i class="fa fa-download"></i> {{ material.filename }}</a><br />
+</div>
