--- a/material_delivery/templates/material_delivery/view.html
+++ b/material_delivery/templates/material_delivery/view.html
@@ -128,24 +128,32 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
                     <h4><b>{% trans 'Deliver Materials' %}</b></h4>
                     
-                    <div id="student_materials" class="bg-success well-sm">
+                    <div id="student_materials">
                         {% if not studentDeliver or studentDeliver.material_deliver.count == 0 %}
                             {% if has_subject_permissions %}
-                                <div class="text-center">
+                                <div class="text-center bg-success well-sm">
                                     <i class="fa fa-exclamation-triangle text-sm"></i>
                                     <small>{% trans "The student hasn't uploaded any material yet." %}</small>
                                 </div>
                             {% endif %}
                         {% else %}
                             {% for material in studentDeliver.material_deliver.all %}
+                                {% include 'material_delivery/_student_material_view.html' %}
                             {% endfor %}
                         {% endif %}
                     </div>
                     
                     {% if not has_subject_permissions %}
-                        {% if material_delivery.data_ini|enable_upload:material_delivery.data_end  %}
+                        {% if material_delivery.data_ini|enable_upload:material_delivery.data_end and studentDeliver %}
+                            <div id="submit_errors" class="col-lg-12 alert alert-danger alert-dismissible" role="alert" style="display:none">
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                <p></p>
+                            </div>
+
                             <div class="text-center">
-                                <a href=""
+                                <a href="javascript:attach_material('{% url 'material_delivery:submit_material' studentDeliver.pk %}')"
                                     class="btn btn-success btn-raised btn-sm"><i class="fa fa-plus-circle"></i> {% trans 'Add your material' %}</a>
                             </div>
                         {% endif %}
@@ -153,7 +161,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
                     <hr />
 
-                    {% if studentDeliver.student_deliver %}
+                    {% if studentDeliver.student_deliver.count > 0 %}
                     {% else %}
                         {% if has_subject_permissions %}
                             <div class="text-center">
@@ -175,6 +183,26 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         </div>
 
     <script type="text/javascript">
+        function attach_material(url) {
+            $('.modal').remove();
+
+            $.get(url, function (modal) {
+                if (typeof(modal.status) !== "undefined") {
+                    if (modal.status == 500) {
+                        $("#submit_errors").find("p").html(modal.message);
+
+                        $("#submit_errors").show();
+                    } else {
+                        alertify.error(modal.message);
+                    }
+                } else {
+                    $("#resource-panel").after(modal);
+
+                    $('.modal').modal('show');
+                }
+            });
+        }
+
         function delete_resource(url) {
             $('.modal').remove();
 
