--- a/material_delivery/templates/material_delivery/window_view.html
+++ b/material_delivery/templates/material_delivery/window_view.html
@@ -148,10 +148,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                         %}>
                         {% csrf_token %}
                         <select name="selected_student" onchange="$('#student_quest').submit();">
-                            {% for stu in sub_students %}
-                            <option value="{{ stu.email }}" {% if stu.email==student %}selected{% endif %}>{{
-                                stu.fullname }}</option>
-                            {% endfor %}
+                            {{ student|students_select:sub_students }}
                         </select>
                     </form>
                     <br clear="all" />
@@ -246,6 +243,10 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         </div>
 
         <script type="text/javascript">
+            $(function () {
+                $("#select_student").select2();
+            });
+            
             function attach_material(url) {
                 $('.modal').remove();
 
